--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -12,7 +12,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Install Racket
+        uses: Bogdanp/setup-racket@v1.6.1
+        with:
+          architecture: 'x64'
+          distribution: 'full'
+          version: '8.15'
 
-    - name: build the site
-      run: make build
+      - name: Save version
+        run: racket --version > .racket-version
+
+      - name: Cache Racket dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/racket
+            ~/.local/share/racket
+          key: ${{ runner.os }}-racket-current-${{ hashFiles('.racket-version') }}
+
+      - name: Install Pollen and Gregor
+        run: |
+          raco pkg install --auto --skip-installed pollen gregor
+
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: build the site
+        run: make build
+
+
